--- a/aula020/index.html
+++ b/aula020/index.html
@@ -11,20 +11,20 @@
     </style>
 </head>
 <body>
-    <form id="form" method="get">
+    <form class="form" action="" method="get">
         <label for="inome">Nome: </label>
-        <input type="text" name="nome" id="inome" class="nome">
+        <input type="text" id="inome" class="nome">
         <br>
         <label for="isobre">Sobrenome: </label>
-        <input type="text" name="sobrenome" id="isobre" class="sobrenome">
+        <input type="text"id="isobre" class="sobrenome">
         <br>
         <label for="ipeso">Peso: </label>
-        <input type="text" name="oeso" id="ipeso" class="peso">
+        <input type="number" id="ipeso" class="peso">
         <br>
         <label for="ialtura">Altura: </label>
-        <input type="text" name="altura" id="ialtura" class="altura">
+        <input type="number"id="ialtura" class="altura">
         <br>
-        <input type="button" value="Enviar">
+        <button class="">enviar</button>
     </form>
 
     <div id="resultado"></div>
