--- a/aula021/index.html
+++ b/aula021/index.html
@@ -13,19 +13,21 @@
 <body>
     <h1>Somando valores</h1>
     <div>
-        <input type="number" name="n1" id="n1">
+        <input type="number" name="txtn1" id="txtn1">
         <p>+</p>
-        <input type="number" name="n2" id="n2">
+        <input type="number" name="txtn2" id="txtn2">
         <input type="button" value="somar" onclick="somar()">
-        <p id="resultado">resultado</p>
+        <div id="res">resultado</div>
     </div>
     <script>
-        function soma(){
-            let tn1 = number.(document.querySelector('n1'))
-            let tn2 = number.(document.querySelector('n2'))
-            let res = tn1 + tn2
-            let resultado = document.querySelector('resultado')
-            resultado.innerHTML = res
+        function somar(){
+            let tn1 = document.querySelector('input#txtn1')
+            let tn2 = document.querySelector('input#txtn2')
+            let resultado = document.querySelector('div#res')
+            let numer1 = Number(tn1.value)
+            let numer2 = Number(tn2.value)
+            let s = numer1 + numer2
+            resultado.innerHTML = s
         }
     </script>
 </body>
