--- a/aula024/index.html
+++ b/aula024/index.html
@@ -6,14 +6,14 @@
     <title>Desafio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1>Hora do Dia</h1>
     </header>
     <section>
-        <div id="horas"><p>aqui vai a hora</p></div>
-        <div id="imagem">
-            <img src="imagens/tarde.png" alt="" >
+        <div id="mensagem"></div>
+        <div id="container">
+            <img id="imagem" src="imagens/manha.jpg" alt="" >
         </div>
     </section>
     <script src="index.js"></script>
