--- a/verificadoridade/index.html
+++ b/verificadoridade/index.html
@@ -22,9 +22,12 @@
                 <input type="radio" name="radsex" id="fem">
                 <label for="fem">Feminino</label>
             </p>
-            <button onclick="verificar()">Verificar</button>
+            <input type="button" value="verificar" onclick="verificar()">
         </form>
-        <p>Preencha os dados acima para ver o resultado!</p>
+        <div id="cont">
+            <div id="resultado">Preencha os dados para ver o resultado!</div>
+            <img src="" id="foto">
+        </div>
     </section>
     <script src="index.js"></script>
 </body>
