--- a/aula033/indes.html
+++ b/aula033/indes.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <section>
+    <section class="container">
         <h1>Lorem ipsum dolor sit amet</h1>
         <!--aqui-->
     </section>
