--- a/modelo2/indes.html
+++ b/modelo2/indes.html
@@ -8,11 +8,8 @@
 </head>
 <body>
     <section>
-        <h1>Timer</h1>
-        <p id="res">00:00:00</p>
-        <input type="button" value="Iniciar" onclick="tempo()">
-        <input type="button" value="Pausar" onclick="pausar()">
-        <input type="button" value="Reiniciar" onclick="reiniciar()">
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat vitae nostrum veritatis molestias, odit cupiditate! Nobis natus hic eveniet possimus maxime ducimus voluptate quam at facilis? In mollitia praesentium laudantium.</p>
     </section>
     <script src="./assets/js/index.js"></script>
 </body>
