--- a/listadetarefas/index.html
+++ b/listadetarefas/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
         <section>
-            <h1>Lista de tarefas</h1>
-            <input type="text" name="texto" id="texto">
-            <input type="button" value="Adicionar tarefa" onclick="adicionar()">
+            <h1>LISTA DE TAREFAS</h1>
+            <div class="container">
+                <input type="text" name="texto" id="texto" placeholder="Adicione uma tarefa">
+                <input type="button" value="ADD" onclick="adicionar()" id="enviar">
+            </div>
             <ul id="res"></ul>
             <p id="linha"></p>
         </section>
